--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -22,7 +22,7 @@
                 <td>{{ news.headline }}</td>
                 <td>{{ news.body }}</td>
                 <td>{{ news.date|date("m/d/Y H:M") }}</td>
-                <td>{{ news.category }}</td>
+                <td>{{ news.category.name }}</td>
                 <td>
                     <a href="{{ path('news_show', {'id': news.id}) }}">show</a>
                     <a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
